Use Gemini 3 Pro to refactor and move cdk to different repository