@@ -3,8 +3,6 @@ package com.example.handler.api.project;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyResponseEvent;
 import com.example.model.Project;
-import com.example.model.PaginatedResult;
-import com.example.constant.Constants;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -14,17 +12,17 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbIndex;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
 import software.amazon.awssdk.enhanced.dynamodb.model.Page;
-import software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional;
+import software.amazon.awssdk.enhanced.dynamodb.model.PageIterable;
 import software.amazon.awssdk.enhanced.dynamodb.model.QueryEnhancedRequest;
 
-import java.util.List;
-import java.util.Map;
+import java.util.Collections;
 import java.util.Iterator;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class ListProjectsTest {
@@ -33,53 +31,42 @@ class ListProjectsTest {
     private DynamoDbTable<Project> mockTable;
     @Mock
     private DynamoDbIndex<Project> mockIndex;
-    @Mock
-    private ObjectMapper mockObjectMapper;
-    @Mock
-    private APIGatewayProxyRequestEvent mockRequest;
+    private ObjectMapper objectMapper = new ObjectMapper();
+    private ListProjects handler;
     
-    private ListProjects listProjectsHandler;
-    private static final String TEST_DOMAIN_ID = "dzd-_domain123";
+    private static final String VALID_DOMAIN_ID = "dzd-123";
 
     @BeforeEach
     void setUp() {
-        listProjectsHandler = new ListProjects(mockTable, mockObjectMapper);
-        when(mockTable.index(eq(Constants.GSI_BY_DOMAIN))).thenReturn(mockIndex);
+        handler = new ListProjects(mockTable, objectMapper);
+        when(mockTable.index(any(String.class))).thenReturn(mockIndex);
     }
 
     @Test
-    void handle_Success_ShouldQueryGSIAndReturn200() throws Exception {
-        Project project = new Project();
-        List<Project> items = List.of(project);
-        
-        Page<Project> mockPage = Page.builder(Project.class)
-                .items(items)
-                .lastEvaluatedKey(null)
-                .build();
-        Iterator<Page<Project>> mockIterator = List.of(mockPage).iterator();
+    void testSuccessfulList() {
+        PageIterable<Project> mockPageIterable = mock(PageIterable.class);
+        Iterator<Page<Project>> mockIterator = mock(Iterator.class);
+        Page<Project> mockPage = Page.create(Collections.emptyList());
 
-        when(mockRequest.getPathParameters()).thenReturn(Map.of("domainIdentifier", TEST_DOMAIN_ID));
-        when(mockRequest.getQueryStringParameters()).thenReturn(null);
-        when(mockIndex.query(any(QueryEnhancedRequest.class))).thenReturn(() -> mockIterator);
-        when(mockObjectMapper.writeValueAsString(any(PaginatedResult.class))).thenReturn("{}");
+        when(mockIndex.query(any(QueryEnhancedRequest.class))).thenReturn(mockPageIterable);
+        when(mockPageIterable.iterator()).thenReturn(mockIterator);
+        when(mockIterator.next()).thenReturn(mockPage);
 
-        APIGatewayProxyResponseEvent response = listProjectsHandler.handle(mockRequest);
+        APIGatewayProxyRequestEvent request = new APIGatewayProxyRequestEvent()
+                .withPathParameters(Map.of("domainIdentifier", VALID_DOMAIN_ID));
+
+        APIGatewayProxyResponseEvent response = handler.handle(request);
 
         assertEquals(200, response.getStatusCode());
-        
-        verify(mockIndex).query(argThat(req -> 
-            ((QueryConditional)req.queryConditional()).key().partitionValue().s().equals(TEST_DOMAIN_ID)
-        ));
     }
 
     @Test
-    void handle_MissingDomainIdentifier_ShouldReturn400() {
-        when(mockRequest.getPathParameters()).thenReturn(Map.of());
+    void testMissingDomainIdReturns400() {
+        APIGatewayProxyRequestEvent request = new APIGatewayProxyRequestEvent();
 
-        APIGatewayProxyResponseEvent response = listProjectsHandler.handle(mockRequest);
+        APIGatewayProxyResponseEvent response = handler.handle(request);
 
         assertEquals(400, response.getStatusCode());
         assertEquals("Missing domainIdentifier.", response.getBody());
-        verify(mockTable, never()).index(any());
     }
 }
